feat(sessions): show session list and shopping cart

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet />
+<app-header></app-header>
+<main class="main">
+  <div class="content">
+    <router-outlet />
+  </div>
+</main>
