--- a/src/app/components/shopping-cart-item/shopping-cart-item.component.html
+++ b/src/app/components/shopping-cart-item/shopping-cart-item.component.html
@@ -5,7 +5,7 @@
       <span>{{ ticket.date | date: 'dd/MM/yyyy' }}</span>
       <span class="shopping-cart__item-quantity">
         x{{ ticket.quantity }}
-        <button mat-icon-button type="button" aria-label="Remove">
+        <button mat-icon-button type="button" aria-label="Remove" (click)="removeFromCart(ticket)">
           <img src="/assets/img/trash.png" alt="Trash bin" />
         </button>
       </span>
