--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,8 @@ main {
   width: 100%;
   min-height: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   padding: 1rem;
   box-sizing: inherit;
   position: relative;
@@ -14,4 +15,8 @@ main {
   width: 100%;
   max-width: 700px;
   margin-bottom: 3rem;
+}
+
+.navigation {
+  align-self: flex-end;
 }
